syntax = "proto3";

package map_renderer_proto;

import "svg.proto";

message Coordinate {
  double lat = 1;
  double lng = 2;
}

message RenderSettings {
  double width = 1;
  double height = 2;
  double padding = 3;
  double line_width = 4;
  double stop_radius = 5;
  uint32 bus_label_font_size = 6;
  repeated double bus_label_offset = 7;
  uint32 stop_label_font_size = 8;
  repeated double stop_label_offset = 9;
  svg_proto.Color underlayer_color = 10;
  double underlayer_width = 11;
  repeated svg_proto.Color color_palette = 12;
}

